3821B1FI1/2_integral_oneapi/pushkarev_ilya/log.txt
/home/crazyproger/sandbox/oneapi-2025/3821B1FI1/2_integral_oneapi/pushkarev_ilya/integral_oneapi.cpp:27:39: warning: 'local' is deprecated: use `local_accessor` instead [-Wdeprecated-declarations]
   27 |                 sycl::access::target::local> local(sycl::range<1>(wg_size * wg_size), h);
      |                                       ^
/opt/intel/oneapi/compiler/2025.0/bin/compiler/../../include/sycl/access/access.hpp:25:9: note: 'local' has been explicitly marked deprecated here
   25 |   local __SYCL2020_DEPRECATED("use `local_accessor` instead") = 2016,
      |         ^
/opt/intel/oneapi/compiler/2025.0/bin/compiler/../../include/sycl/detail/defines_elementary.hpp:62:40: note: expanded from macro '__SYCL2020_DEPRECATED'
   62 | #define __SYCL2020_DEPRECATED(message) __SYCL_DEPRECATED(message)
      |                                        ^
/opt/intel/oneapi/compiler/2025.0/bin/compiler/../../include/sycl/detail/defines_elementary.hpp:53:38: note: expanded from macro '__SYCL_DEPRECATED'
   53 | #define __SYCL_DEPRECATED(message) [[deprecated(message)]]
      |                                      ^
/home/crazyproger/sandbox/oneapi-2025/3821B1FI1/2_integral_oneapi/pushkarev_ilya/integral_oneapi.cpp:30:18: error: non-constant-expression cannot be narrowed from type 'int' to 'typename std::enable_if_t<(2 == 2), size_t>' (aka 'unsigned long') in initializer list [-Wc++11-narrowing]
   30 |                 {rounded, rounded}, {wg_size, wg_size}), [=](sycl::nd_item<2> item) {
      |                  ^~~~~~~
/home/crazyproger/sandbox/oneapi-2025/3821B1FI1/2_integral_oneapi/pushkarev_ilya/integral_oneapi.cpp:30:18: note: insert an explicit cast to silence this issue
   30 |                 {rounded, rounded}, {wg_size, wg_size}), [=](sycl::nd_item<2> item) {
      |                  ^~~~~~~
      |                  static_cast<type>( )
/home/crazyproger/sandbox/oneapi-2025/3821B1FI1/2_integral_oneapi/pushkarev_ilya/integral_oneapi.cpp:30:27: error: non-constant-expression cannot be narrowed from type 'int' to 'size_t' (aka 'unsigned long') in initializer list [-Wc++11-narrowing]
   30 |                 {rounded, rounded}, {wg_size, wg_size}), [=](sycl::nd_item<2> item) {
      |                           ^~~~~~~
/home/crazyproger/sandbox/oneapi-2025/3821B1FI1/2_integral_oneapi/pushkarev_ilya/integral_oneapi.cpp:30:27: note: insert an explicit cast to silence this issue
   30 |                 {rounded, rounded}, {wg_size, wg_size}), [=](sycl::nd_item<2> item) {
      |                           ^~~~~~~
      |                           static_cast<size_t>( )
/home/crazyproger/sandbox/oneapi-2025/3821B1FI1/2_integral_oneapi/pushkarev_ilya/integral_oneapi.cpp:67:29: warning: 'get_access' is deprecated: get_access for host_accessor is deprecated, please use get_host_access instead [-Wdeprecated-declarations]
   67 |         result = result_buf.get_access<sycl::access::mode::read>()[0];
      |                             ^
/opt/intel/oneapi/compiler/2025.0/bin/compiler/../../include/sycl/buffer.hpp:529:37: note: 'get_access' has been explicitly marked deprecated here
  529 |           accessor_property_list<>> get_access(const detail::code_location
      |                                     ^
/home/crazyproger/sandbox/oneapi-2025/3821B1FI1/2_integral_oneapi/pushkarev_ilya/integral_oneapi.cpp:67:29: warning: 'get_access<sycl::access::mode::read>' is deprecated: get_access for host_accessor is deprecated, please use get_host_access instead [-Wdeprecated-declarations]
   67 |         result = result_buf.get_access<sycl::access::mode::read>()[0];
      |                             ^
/opt/intel/oneapi/compiler/2025.0/bin/compiler/../../include/sycl/buffer.hpp:523:3: note: 'get_access<sycl::access::mode::read>' has been explicitly marked deprecated here
  523 |   __SYCL2020_DEPRECATED("get_access for host_accessor is deprecated, please "
      |   ^
/opt/intel/oneapi/compiler/2025.0/bin/compiler/../../include/sycl/detail/defines_elementary.hpp:62:40: note: expanded from macro '__SYCL2020_DEPRECATED'
   62 | #define __SYCL2020_DEPRECATED(message) __SYCL_DEPRECATED(message)
      |                                        ^
/opt/intel/oneapi/compiler/2025.0/bin/compiler/../../include/sycl/detail/defines_elementary.hpp:53:38: note: expanded from macro '__SYCL_DEPRECATED'
   53 | #define __SYCL_DEPRECATED(message) [[deprecated(message)]]
      |                                      ^
3 warnings and 2 errors generated.
